# pointage-bus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Pointage bus/: Dockerfile  README.md
Pointage bus/app/: auth.py  occasional.py  service_logic.py  sheets.py
Pointage bus/secrets/: service-account.json
app/: auth.py  config.py  main.py  occasional.py  parsing.py  sheets.py  sheets_base.py
app/static/: manifest.webmanifest  sw.js
app/templates/: base.html  home.html  login.html  occasionnel.html  offline.html  regulier.html
scripts/: gen_icons.py
tests/: test_parsing.py  test_service_logic.py
