[project]
name = "pointage-bus"
version = "0.1.0"
description = "Saisie automatisée des pointages de service de bus dans Google Sheets"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "gspread>=6.1",
    "google-auth>=2.35",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
